--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.top-page-element {
+.top {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.top-page-element img {
+.top img {
   width: 100%;
 }
-.top-page-element .more-info {
+.top .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.top-page-element { text-align: center;
+.top { text-align: center;
 }
 }
-.centered-main-page-element {
+.centered-main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.task-row {
   display: flex;
 }
 ul {
