--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+h1 {
+  display: none;
+}
 .top {
   width: 500px;
   margin: 0 auto;
@@ -40,7 +43,7 @@ ul {
   padding: 0px;
 }
 li, 
-h3 {
+h2 {
   list-style: none;
 }
 input,
@@ -60,7 +63,7 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
+h2,
 .new-task-label[for="new-task"] {
   color: #333;
   font-weight: 700;
