--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button:hover {
 }
 /* Heading */
 h2,
-.new-task-label[for="new-task"] {
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -90,7 +90,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-new-task-label[for="new-task"] {
+new-task-label {
   display: block;
   margin: 0 0 20px;
 }
