refactor(basic-3.6): space after property name media

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
-h1 {
+.page-title {
   display: none;
 }
 .top {
@@ -13,14 +13,14 @@ h1 {
   display: block;
   text-align: right;
 }
-.top img {
+.top__eisenhower-matrix {
   width: 100%;
 }
 .top .more-info {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 .top { 
   text-align: center;
   }
@@ -47,10 +47,11 @@ h2 {
   list-style: none;
 }
 input,
-button{
+.task-list__item__edit {
   outline: none;
 }
-button {
+.task-list__item__edit,
+.task-list__item__delete {
   background: none;
   border: 0px;
   color: #888;
@@ -59,11 +60,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.task-list__item__edit:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h2,
+.tasks-title,
 .new-task-label {
   color: #333;
   font-weight: 700;
@@ -107,7 +108,7 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-list__item {
   vertical-align: middle;
 }
 
@@ -123,12 +124,12 @@ li > label {
 li > input[type="text"] {
   width: 226px;
 }
-.delete img {
+.task-list__item img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.task-list__item img:hover {
   transform: rotateZ(0);
 }
 
