--- a/style.css
+++ b/style.css
@@ -30,19 +30,21 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.new-task__input,
+.task-list__item__label,
+.task-list__item__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row {
+.new-task__task-row {
   display: flex;
 }
-ul {
+.task-list {
   margin: 0;
   padding: 0px;
 }
-li, 
+.task-list__item, 
 h2 {
   list-style: none;
 }
@@ -74,7 +76,8 @@ input,
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.new-task__input,
+.task-list__item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -86,12 +89,13 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.new-task__input,
+.task-list__item__input:focus {
   color: #333;
 }
 
 /* New Task */
-new-task-label {
+new-task__label {
   display: block;
   margin: 0 0 20px;
 }
@@ -100,7 +104,7 @@ new-task-label {
 }
 
 /* Task list */
-li {
+.task-list__item  {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -112,16 +116,13 @@ li {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-list__item__checkbox {
   margin: 0 10px;
 }
-li > label {
+.task-list__item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
-}
-li > input[type="text"] {
   width: 226px;
 }
 .task-list__item img {
@@ -134,21 +135,21 @@ li > input[type="text"] {
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks .task-list__item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list__item__input {
   display: none;
 }
 
-.edit-mode input[type=text] {
+.edit-mode .task-list__item__input {
   display: inline-block;
   width:224px;
 }
 
-.edit-mode label {
+.edit-mode .task-list__item__label {
   display: none;
 }
